readme.md update

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_PROJECTID=eventx-1a152
 VITE_STORAGEBUCKET=eventx-1a152.appspot.com
 VITE_MESSAGINGSENDERID=883887694282
 VITE_APPID=1:883887694282:web:e5586c485abbaa46f2ef33
-VITE_API_URL=http://localhost:7000
+VITE_API_URL=https://eventx-server.vercel.app
